# gameEngine

./: .gitignore  buildAndRunGame.sh
game/: CMakeLists.txt
game/assets/: player.bmp~
game/ide-build/: CMakeCache.txt  Makefile  cmake_install.cmake  game
game/ide-build/.cmake/api/v1/reply/: cache-v2-b6a77bc0757031123a0d.json  cmakeFiles-v1-c68a8675f391dacfa853.json  codemodel-v2-0e294039b45b5f1c414c.json  directory-_deps.catch2-build-Debug-8385ec9f64c1be2a472f.json  directory-_deps.catch2-build.src-Debug-e39a6ece83f881163d2a.json  directory-_deps.sdl2-build-Debug-f88d3bea251e35228535.json  directory-gameEngineBuild-Debug-2326997b88f25e6dd988.json  index-2024-12-08T22-32-52-0059.json  target-Catch2-Debug-109c42e899f9550eea67.json  target-Catch2WithMain-Debug-a18b1c4070e5ddeb16cf.json  target-SDL2-Debug-3290d757edbc88a9fe3d.json  target-SDL2-static-Debug-17f06c23aee2d347454b.json  target-SDL2_test-Debug-4b30a39439296b21c7d5.json  target-SDL2main-Debug-7caafc05080c384fad9f.json  target-game-Debug-ce94405078912e85df4a.json  target-gameEngine-Debug-bfa8f091e04f331bf1a9.json  target-sdl_headers_copy-Debug-04b75a8603cedf07010a.json  target-tests-Debug-cb2af28784bbbac283b4.json  target-uninstall-Debug-acfed8e5fe5a890bcfc2.json
game/ide-build/gameEngineBuild/: Makefile  cmake_install.cmake
game/src/: main.cpp
gameEngine/: CMakeLists.txt
gameEngine/.cache/clangd/index/: engine.cpp.EB2A6D821E36348E.idx  start.cpp.4379E163F6BB4EB2.idx  start.h.9812C30FDB679F2F.idx
gameEngine/include/: engine.h  entity.h  inputs.h  options.h  start.h
gameEngine/include/component/: component.h  initializable.h  transform.h  transform_component.h
gameEngine/include/component/animator/: animator_component.h
gameEngine/include/component/collider/: collider_component.h  collider_detector.h  collision_detector.h  collision_resolver.h  ellipse_colider_component.h  polygonCollider.h  rectangle_colider_component.h
gameEngine/include/component/collider/ellipse/: ellipse_axes.h  ellipse_colider_component.h
gameEngine/include/component/collider/rectangle/: rectangle_colider_component.h  rectangle_corners.h
gameEngine/include/component/render/: ellipseRender.h  ellipse_render_component.h  rectangle_render_component.h  render.h  renderEllipse.h  render_component.h  spriteRender.h  sprite_render_component.h  textureManager.h  texture_manager.h
gameEngine/include/init/: start.h
gameEngine/include/math/: point.h  utils.h
gameEngine/include/static/: collision_resolver.h  coordinates_converter.h  geometry.h
gameEngine/include/util/: geometry.h  vector.h
gameEngine/src/: engine.cpp  inputs.cpp  start.cpp  textureManager.cpp  texture_manager.cpp
gameEngine/src/c++/: engine.cpp  entity.cpp  options.cpp  texture_manager.cpp
gameEngine/src/c++/component/animator/: animator_component.cpp
gameEngine/src/c++/component/collider/: collider.cpp  collider_component.cpp  collision_resolver.cpp  ellipse_collider_component.cpp  rectangle_colider_component.cpp
gameEngine/src/c++/component/render/: ellipse_render_component.cpp  rectangle_render_component.cpp  render_component.cpp  sprite_render_component.cpp
gameEngine/src/c++/static/: collision_resolver.cpp  coordinates_converter.cpp  geometry.cpp  inputs.cpp  options.cpp  texture_manager.cpp
gameEngine/src/c++/util/: geometry.cpp  vector.cpp
gameEngine/src/component/collider/: collider.cpp  collision_detector.cpp  collision_resolver.cpp  ellipse_collider_component.cpp  polygonCollider.cpp  rectangle_colider_component.cpp
gameEngine/src/component/render/: ellipse_render_component.cpp  rectangle_render_component.cpp  sprite_render_component.cpp
gameEngine/src/math/: point.cpp  utils.cpp
gameEngine/src/test/component/collider/: collision_resolver.cpp
scripts/: buildAndRun.sh  buildAndRunEnginesTests.sh  buildAndRunSanitized.sh
